<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Setting Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Popular Movies Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_popular_value</string>

    <!-- Label for order-most-popular option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_popular_label">Most Popular</string>
    <string name="settings_order_by_most_popular_value" translatable="false">popular</string>

    <!-- Label for order-by top rated  option [CHAR LIMIT=20] -->
    <string name="settings_order_by_top_rated_label">Top Rated</string>
    <string name="settings_order_by_top_rated_value" translatable="false">top</string>


    <string name="image_poster">Image Poster</string>
    <string name="description_poster_thumbnail">Poster Thumbnail</string>
    <string name="user_rating">User Rating:</string>
    <string name="detail_error_message">Houston tenemos un problema</string>
    <string name="sort_by_popular_movies">Sort by Popular Movies</string>
    <string name="sort_by_top_rated">Sort by Top Rated</string>
    <string name="release_date_label">Release date:</string>
    <string name="overview_label">Synopsis:</string>
    <string name="background_title">Background title</string>
    <string name="no_internet_error">No network available, please check your WiFi or Data connection</string>
    <string name="api_missing_error">Please obtain your API KEY from themovie.org first!</string>
    <string name="refresh_news">Refresh</string>
    <string name="star_image">Star image</string>
    <string name="favorite_movie">Favorite</string>
    <string name="title_bar_details_activity">Details Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expand_collapse_review">Expand/Collapse review</string>
    <string name="label_read_more">Read more</string>
    <string name="label_review_by">Review by %1$s</string>
    <string name="content_description_trailer_image">Movie trailer Image</string>
    <string name="content_description_favorite_image">Favorite Image thumbnail</string>
    <string name="list_favorites">View Favorites</string>
    <string name="title_bar_favorites_activity">My Favorites Movies</string>
    <string name="add_favorites">Add Favorites</string>
    <string name="empty_favorite_movies">You don\'t have Favorite Movies yet \n\n
    You can start adding them from the Details screen</string>
    <string name="no_reviews_found">No reviews found for this movie</string>
    <string name="no_trailers_found">No Trailers found for this movie</string>
    <string name="network_no_available">Network  no Available</string>
    <string name="share_menu_item">Share</string>
    <string name="send_to">Share with</string>
    <string name="no_release_date">Release date no exist</string>

</resources>
