<?xml version="1.0" encoding="utf-8"?>

<!-- Options menu for the MainActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_white_36dp"
        android:orderInCategory="1"
        android:title="@string/refresh_news"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/list_favorites"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_filter"
        android:orderInCategory="1"
        android:title="@string/settings_menu_item"
        app:showAsAction="ifRoom" />



</menu>