<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true">


        <ImageView
            android:id="@+id/posterThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_poster_thumbnail"
            android:maxHeight="250dp"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_below="@id/posterThumbnail"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginStart="@dimen/margin_5"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_title"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/userRatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextView"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/user_rating"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/starImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_below="@id/titleTextView"
            android:layout_toEndOf="@id/userRatingTextView"
            android:contentDescription="@string/star_image"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/valueRatingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_toEndOf="@id/starImageView" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_below="@id/userRatingTextView"
            android:text="@string/release_date_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/release_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/valueRatingTextView"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_toEndOf="@id/release_date_label" />


        <TextView
            android:id="@+id/overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/release_date_label"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/overview_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/overview_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/overview_label"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:paddingEnd="@dimen/margin_10"
            android:paddingStart="@dimen/margin_10" />


    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>